# aihero

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
course/: course_001.ipynb  data_prep_001.ipynb
course/logs/: faq_agent_20250930_190346_fd5c8e.json  faq_agent_20250930_190422_5802fc.json  faq_agent_20250930_190518_715838.json  faq_agent_20251001_105711_6e0cba.json  faq_agent_20251001_105737_9b824d.json  faq_agent_20251001_105803_46cae4.json  faq_agent_20251006_133028_88f206.json  faq_agent_20251006_133120_fa60d3.json  faq_agent_20251006_133130_9f8dee.json  faq_agent_v2_20250930_190639_eb6e83.json  faq_agent_v2_20250930_191627_bf0db9.json  faq_agent_v2_20250930_191637_9a2b2a.json  faq_agent_v2_20250930_191647_6a104d.json  faq_agent_v2_20250930_191659_5660ba.json  faq_agent_v2_20250930_191710_163612.json  faq_agent_v2_20250930_191722_6f2a59.json  faq_agent_v2_20250930_191736_9b16f6.json  faq_agent_v2_20250930_191741_15206e.json  faq_agent_v2_20250930_191747_be34a6.json  faq_agent_v2_20250930_191757_9d1a69.json  faq_agent_v2_20251001_105908_b72a98.json  faq_agent_v2_20251001_105959_84e5fd.json  faq_agent_v2_20251001_110006_a8d9a6.json  faq_agent_v2_20251001_110011_d615f1.json  faq_agent_v2_20251001_110016_4347f2.json  faq_agent_v2_20251001_110025_299cc4.json  faq_agent_v2_20251001_110030_b24d4d.json  (+15 more)
projects/: Untitled.ipynb
projects/app/: README.md  app.py  pyproject.toml  requirements.txt  search_agent.py
projects/app/logs/: gh_agent_20251006_153040_b6d5f4.json  gh_agent_20251006_153307_1df878.json  gh_agent_20251006_153406_7e8bfd.json
(+1 files in other folders)
